objects/amazonconnect__AWS_PhoneCall__c.object
<CustomObject>
    <description>AWS Phone Call</description>
    <fields>
        <fullName>amazonconnect__ANI__c</fullName>
        <label>ANI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <description>Amazon Connect Contact Id</description>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact_Id__c</fullName>
        <description>Amazon Connect Contact Id</description>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PhoneCall</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DNIS__c</fullName>
        <label>DNIS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Ended__c</fullName>
        <label>Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Recording__c</fullName>
        <label>Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Started__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                    <default>true</default>
                    <label>In-Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AWS Phone Call</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Phone Call - {0000000}</displayFormat>
        <label>AWS Phone Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Phone Calls</pluralLabel>
    <recordTypes>
        <fullName>amazonconnect__Completed_Calls</fullName>
        <active>false</active>
        <label>Completed Calls</label>
    </recordTypes>
    <recordTypes>
        <fullName>amazonconnect__In_Progress_Calls</fullName>
        <active>true</active>
        <label>In-Progress Calls</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>